--- a/pom.xml
+++ b/pom.xml
@@ -4,37 +4,18 @@
     <artifactId>jgroups</artifactId>
     <packaging>bundle</packaging>
     <name>JGroups</name>
-    <version>4.2.11.Final</version>
+    <version>4.211.0-SNAPSHOT</version>
     <url>http://www.jgroups.org</url>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <!-- nexus-staging-maven-plugin -->
-        <autoReleaseAfterClose>true</autoReleaseAfterClose>
-        <nexus.server.id>jboss-releases-repository</nexus.server.id>
-        <nexus.server.url>https://repository.jboss.org/nexus</nexus.server.url>
-        <nexus.snapshot.server.id>jboss-snapshots-repository</nexus.snapshot.server.id>
-        <nexus.snapshot.server.url>https://repository.jboss.org/nexus/content/repositories/snapshots/</nexus.snapshot.server.url>
-        <insecure.repositories>ERROR</insecure.repositories>
     </properties>
 
     <description>
         Reliable cluster communication toolkit
     </description>
-
-    <organization>
-        <name>JBoss, a division of Red Hat</name>
-        <url>http://www.jboss.org</url>
-    </organization>
-
-    <developers>
-        <developer>
-            <name>Bela Ban</name>
-            <email>belaban@yahoo.com</email>
-        </developer>
-    </developers>
 
     <licenses>
         <license>
@@ -42,28 +23,39 @@
             <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
         </license>
     </licenses>
-
-    <scm>
-        <connection>scm:git:git://github.com/belaban/JGroups.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com/belaban/JGroups.git</developerConnection>
-        <url>https://github.com/belaban/JGroups</url>
-      <tag>jgroups-4.2.11.Final</tag>
-  </scm>
+    
+    <ciManagement>
+        <system>Hudson</system>
+        <url>https://srs.slac.stanford.edu/hudson/view/LSST/job/${project.artifactId}/</url>
+    </ciManagement>
 
     <issueManagement>
-        <system>jira</system>
-        <url>https://jira.jboss.com/jira/browse/JGRP</url>
+        <system>Jira</system>
+        <url>https://jira.slac.stanford.edu/browse/LSSTCCS</url>
     </issueManagement>
 
+    <scm>
+        <url>https://github.com/lsst-camera-ccs/JGroups</url>
+        <connection>scm:git:git://github.com/lsst-camera-ccs/JGroups.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/lsst-camera-ccs/JGroups.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
+
     <distributionManagement>
+        <site>
+            <id>lsst-maven2-site</id>
+            <name>LSST Maven2 central site repository</name>
+            <url>dav:${org.lsst.ccs.site.url}</url>
+        </site>
         <repository>
-            <id>${nexus.server.id}</id>
-            <name>JBoss Releases Repository</name>
-            <url>${nexus.server.url}</url>
+            <id>lsst-maven2</id>
+            <name>LSST Maven 2 central repository</name>
+            <url>https://repo-nexus.lsst.org/nexus/content/repositories/ccs-maven2/</url>
         </repository>
         <snapshotRepository>
-            <id>${nexus.snapshot.server.id}</id>
-            <url>${nexus.snapshot.server.url}</url>
+            <id>lsst-maven2-snapshots</id>
+            <name>LSST Maven2 central SNAPSHOTS repository</name>
+            <url>https://repo-nexus.lsst.org/nexus/content/repositories/ccs-maven2-snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
 
