--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     </properties>
 
     <description>
-        Reliable cluster communication toolkit
+        Reliable cluster communication toolkit (LSST CCS fork)
     </description>
 
     <licenses>
