--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <artifactId>jgroups</artifactId>
     <packaging>bundle</packaging>
     <name>JGroups</name>
-    <version>4.211.0</version>
+    <version>4.211.1-SNAPSHOT</version>
     <url>http://www.jgroups.org</url>
 
     <properties>
@@ -38,7 +38,7 @@
         <url>https://github.com/lsst-camera-ccs/JGroups</url>
         <connection>scm:git:git://github.com/lsst-camera-ccs/JGroups.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/lsst-camera-ccs/JGroups.git</developerConnection>
-        <tag>jgroups-4.211.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
