--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <artifactId>jgroups</artifactId>
     <packaging>bundle</packaging>
     <name>JGroups</name>
-    <version>4.211.2-SNAPSHOT</version>
+    <version>4.211.2</version>
     <url>http://www.jgroups.org</url>
 
     <properties>
